--- a/webapp/view/comment.html
+++ b/webapp/view/comment.html
@@ -35,7 +35,27 @@
   <div class="wrapper grey">
     <div class="comment-counter">1/8</div>
     <div class="comment-title">Oberster Gewerkschafter Paul Rechsteiner: «Die bürgeliche Mehrheit hat keine Zukunft».</div>
-    <div class="comment-container">
+    <div class="discussion-container collapsed">
+      <div class="comment-container parent approved">
+        <div class="comment-meta">
+          <div class="comment-user">Ophelia Sky</div>
+          <div class="comment-timestamp">03.08.2018 12.00</div>
+        </div>
+        <div class="comment-content">
+          Die ist ein Beispiel für einen Blindtext, der auf deutsch geschrieben ist. Es gibt noch viele weitere Arten des Hauses, wobei die ersten Menschen heute nicht sind. Zudem sind Beispiele jetzt noch frei, denn man sollte bedenken, der Text macht wenig Sinn. Mit brausender Geschwindigkeit war der Titel des neuen Boots in naher Ferne, weshalb sich der Briefträger einen roten Mantel zur Reinigung brachte. Ein weiterer Punkt wäre es, die verständliche Blindtexte heute noch anzurufen denn der Tisch steht im Gang. Zur damaligen Zeit war es eher üblich, die gebrauchten Handtücher mittels Fensterreiniger
+        </div>
+      </div>
+      <div class="comment-container child approved">
+        <div class="comment-meta">
+          <div class="comment-user">Ophelia Sky</div>
+          <div class="comment-timestamp">03.08.2018 12.00</div>
+        </div>
+        <div class="comment-content">
+          Die ist ein Beispiel für einen Blindtext, der auf deutsch geschrieben ist. Es gibt noch viele weitere Arten des Hauses, wobei die ersten Menschen heute nicht sind. Zudem sind Beispiele jetzt noch frei, denn man sollte bedenken, der Text macht wenig Sinn. Mit brausender Geschwindigkeit war der Titel des neuen Boots in naher Ferne, weshalb sich der Briefträger einen roten Mantel zur Reinigung brachte. Ein weiterer Punkt wäre es, die verständliche Blindtexte heute noch anzurufen denn der Tisch steht im Gang. Zur damaligen Zeit war es eher üblich, die gebrauchten Handtücher mittels Fensterreiniger
+        </div>
+      </div>
+    </div>
+    <div class="comment-container child new">
       <div class="comment-status hidden">
         <div class="approved">Freigeschaltet</div>
         <div class="deleted">Gelöscht</div>
@@ -68,6 +88,10 @@
         </div>
         <div class="btn approve-btn">
           <i class="icon icon-approve"></i>
+        </div>
+        <div class="show-discussion">
+          <span>Diskussion anzeigen</span>
+          <div class="btn show-btn"></div>
         </div>
       </div>
     </div>
