--- a/webapp/view/comment.html
+++ b/webapp/view/comment.html
@@ -33,8 +33,9 @@
 			</div>
 		</header>
 		<div class="wrapper grey">
-			<div class="comment-counter"></div>
-			<div class="comment-title">Oberster Gewerkschafter Paul Rechsteiner: «Die bürgeliche Mehrheit hat keine Zukunft».</div>
+			<div class="comment-counter">&nbsp;</div>
+			<div class="comment-title">&nbsp;</div>
+
 			<div class="discussion-container collapsed"></div>
 			<div class="comment-container new">
 				<div class="comment-status hidden">
