--- a/webapp/view/comment.html
+++ b/webapp/view/comment.html
@@ -38,7 +38,7 @@
 
 			<div class="discussion-container collapsed"></div>
 			<div class="comment-container new">
-				<div class="comment-status hidden">
+				<div class="comment-status">
 					<div class="approved">Freigeschaltet</div>
 					<div class="deleted">Gelöscht</div>
 				</div>
