--- a/webapp/view/dashboard.html
+++ b/webapp/view/dashboard.html
@@ -17,22 +17,22 @@
 		<title>pili-ana</title>
 	</head>
 	<body>
-		<h1 id="mainHeading">Dashboard</h1>
-		<section id="ownStorys">
+		<h1 id="main-heading">Dashboard</h1>
+		<section id="ownstorys">
 			<h2 class="heading">Eigene Storys</h2>
-			<div class="discussionSlider">
+			<div class="discussion-slider">
 				<ul class="slider"></ul>
 			</div>
 		</section>
 		<!--<section id="tagsStorys">
 			<h2 class="heading">Tag Storys</h2>
-			<div class="discussionSlider">
+			<div class="discussion-slider">
 				<ul class="slider"></ul>
 			</div>
 		</section>-->
-		<section id="allStorys">
+		<section id="allstorys">
 			<h2 class="heading">Alle Storys</h2>
-			<div class="discussionSlider">
+			<div class="discussion-slider">
 				<ul class="slider"></ul>
 			</div>
 		</section>
