--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -15,7 +15,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
-#mainHeading {
+#main-heading {
   color: #4A4A4A;
   font-size: 1.4em;
   font-weight: 900;
