--- a/webapp/view/comment.html
+++ b/webapp/view/comment.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script src="../config.js"></script>
+		<script src="../js/gtm.js"></script>
+		<script>
+			var gtmId = config.gtm.containerId;
+			GTM.addToDataLayer('pageType', 'Comment');
+		</script>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer',gtmId);</script>
+		<!-- End Google Tag Manager -->
 		<meta charset="utf-8">
 
 		<meta name="MobileOptimized" content="320">
@@ -77,7 +90,6 @@
 			</div>
 		</div>
 	</body>
-	<script src="../config.js"></script>
 	<script src="../js/main.js"></script>
 	<script src="../js/comment.js"></script>
 </html>
