--- a/webapp/view/dashboard.html
+++ b/webapp/view/dashboard.html
@@ -1,56 +1,15 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
 
-		<meta name="MobileOptimized" content="320">
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0, shrink-to-fit=no">
-		<meta name="apple-touch-fullscreen" content="yes"/>
-		<meta names="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<script src="../config.js"></script>
-		<script src="../js/gtm.js"></script>
-		<script>
-			var gtmId = config.gtm.containerId;
-			GTM.addToDataLayer('pageType', 'Overview');
-		</script>
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer',gtmId);</script>
-		<!-- End Google Tag Manager -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-		<script src="./library/sly.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
-		<link rel="stylesheet" type="text/css" href="./css/dashboard.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-		<title>pili-ana</title>
-	</head>
-	<body>
-		<h1 id="main-heading">Dashboard</h1>
-		<section id="ownstorys">
+		<h1 id="mainHeading">Dashboard</h1>
+		<section id="ownStorys">
 			<h2 class="heading">Eigene Storys</h2>
-			<div class="discussion-slider">
+			<div class="discussionSlider">
 				<ul class="slider"></ul>
 			</div>
 		</section>
-		<!--<section id="tagsStorys">
-			<h2 class="heading">Tag Storys</h2>
-			<div class="discussion-slider">
-				<ul class="slider"></ul>
-			</div>
-		</section>-->
-		<section id="allstorys">
+		<section id="allStorys">
 			<h2 class="heading">Alle Storys</h2>
-			<div class="discussion-slider">
+			<div class="discussionSlider">
 				<ul class="slider"></ul>
 			</div>
 		</section>
-		<script src="../js/main.js"></script>
-		<script src="../js/dashboard.js"></script>
-
-	</body>
-</html>
+		<script src="js/dashboard.js"></script>
