--- a/webapp/view/reply.html
+++ b/webapp/view/reply.html
@@ -1,35 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
 
-		<meta name="MobileOptimized" content="320">
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0, shrink-to-fit=no">
-		<meta name="apple-touch-fullscreen" content="yes"/>
-		<meta names="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<script src="../config.js"></script>
-		<script src="../js/gtm.js"></script>
-		<script>
-			var gtmId = config.gtm.containerId;
-			GTM.addToDataLayer('pageType', 'Reply');
-		</script>
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer',gtmId);</script>
-		<!-- End Google Tag Manager --><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-		<script src="./library/sly.min.js"></script>
-		<!-- <script src="./js/dashboard.js"></script> -->
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
-		<link rel="stylesheet" type="text/css" href="./css/loader.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-		<title>pili-ana</title>
-	</head>
-	<body>
 		<header>
 			<div class="btn-container">
 			  <div class="btn-left">
@@ -60,11 +29,7 @@
 				<canvas height="70" width="70" id="loader" />
 			</div>
 		</div>
-		<script src="../config.js"></script>
-		<script src="../js/main.js"></script>
-		<script src="./js/loader.js"></script>
-		<script src="../js/reply.js"></script>
 
+		<script src="js/loader.js"></script>
+		<script src="js/reply.js"></script>
 
-	</body>
-</html>
