--- a/webapp/view/dashboard.html
+++ b/webapp/view/dashboard.html
@@ -2,13 +2,13 @@
 		<h1 id="mainHeading">Dashboard</h1>
 		<section id="ownStorys">
 			<h2 class="heading">Eigene Storys</h2>
-			<div class="discussionSlider">
+			<div class="discussion-slider">
 				<ul class="slider"></ul>
 			</div>
 		</section>
 		<section id="allStorys">
 			<h2 class="heading">Alle Storys</h2>
-			<div class="discussionSlider">
+			<div class="discussion-slider">
 				<ul class="slider"></ul>
 			</div>
 		</section>
