--- a/webapp/view/dashboard.html
+++ b/webapp/view/dashboard.html
@@ -1,6 +1,6 @@
 
 		<h1 id="mainHeading">Dashboard</h1>
-		<section id="ownStorys">
+		<section id="ownStorys" class="loading">
 			<h2 class="heading">Eigene Storys</h2>
 			<div class="discussion-slider">
 				<ul class="slider"></ul>
