--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -71,6 +71,7 @@ h2.heading {
 }
 .wrapper {
   position: relative;
+  margin-bottom: 2em;
 }
 .wrapper.grey {
   /*background: #FAFAFA;*/
@@ -169,7 +170,8 @@ progress::-webkit-progress-value {
   box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
   border-radius: 2px;
   position: relative;
-  /*height: 355px;*/
+  z-index: 0;
+  background: white;
 }
 .comment-container.new {
   visibility: hidden;
@@ -218,35 +220,35 @@ progress::-webkit-progress-value {
 .comment-staple {
   opacity: 0.85;
   width: 100%;
-  z-index: 1;
+  z-index: -1;
+  position: relative;
+  visibility: hidden;
 }
-.comment-staple .staple-1 {
-  margin: auto;
-  width: 85%;
-  height: 10px;
-  -webkit-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-  -moz-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-  box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-  border-radius: 2px;
-}
-.comment-staple .staple-2 {
-  margin: auto;
-  width: 80%;
-  height: 10px;
-  -webkit-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-  -moz-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-  box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-  border-radius: 2px;
-}
+.comment-staple .staple-1,
+.comment-staple .staple-2,
 .comment-staple .staple-3 {
   margin: auto;
-  width: 75%;
   height: 10px;
   -webkit-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
   -moz-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
   box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
   border-radius: 2px;
+  position: relative;
+  background: white;
+}
+.comment-staple .staple-1 {
+  width: 85%;
+  z-index: 2;
+}
+.comment-staple .staple-2 {
+  width: 80%;
+  z-index: 1;
+}
+.comment-staple .staple-3 {
+  width: 75%;
+  height: 10px;
   opacity: 0.45;
+  z-index: 0;
 }
 .comment-media {
   margin: auto;
@@ -305,6 +307,7 @@ progress::-webkit-progress-value {
   align-items: center;
   z-index: 10;
   transition: all .3s ease;
+  box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
 }
 .action-btns .delete-btn {
   background-color: #F40F97;
@@ -363,8 +366,10 @@ progress::-webkit-progress-value {
 .discussion-container.collapsed ~ .comment-container.child ~ .action-btns .approve-btn {
   display: none;
 }
-.discussion-container.collapsed ~ .comment-container.child ~ .action-btns .show-discussion {
+.discussion-container.collapsed ~ .comment-container.child ~ .action-btns .show-discussion,
+.discussion-container.collapsed ~ .comment-container.child ~ .comment-staple {
   display: block;
+  visibility: visible;
 }
 .discussion-container:not(.collapsed) .comment-container:after,
 .discussion-container.collapsed ~ .comment-container.child.new:after {
