WATII-3203: loader added, error catching handler

--- a/webapp/view/comment.html
+++ b/webapp/view/comment.html
@@ -1,64 +1,64 @@
+<div class="loaderOverlay"><div class="loader"><div></div><div></div><div></div><div></div></div></div>
+<header>
+	<div class="btn-container">
+		<div class="btn-left">
+			<a href="/" class="btn back-btn" data-navigo>zurück</a>
+		</div>
+		<div class="btn-right">
+			<a class="btn skip-btn">skip</a>
+		</div>
+	</div>
+	<div class="progress-bar">
+		<progress max="100" value="0"></progress>
+	</div>
+</header>
+<div id="index" data-type="Comments"></div>
+<div class="wrapper grey">
+	<div class="swipe-delete"></div>
+	<div class="swipe-approve"></div>
 
-		<header>
-			<div class="btn-container">
-				<div class="btn-left">
-					<a href="/" class="btn back-btn" data-navigo>zurück</a>
-				</div>
-				<div class="btn-right">
-					<a class="btn skip-btn">skip</a>
-				</div>
-			</div>
-			<div class="progress-bar">
-				<progress max="100" value="0"></progress>
-			</div>
-		</header>
-		<div class="wrapper grey">
-			<div class="swipe-delete"></div>
-			<div class="swipe-approve"></div>
+	<div class="comment-counter">&nbsp;</div>
+	<div class="comment-title">&nbsp;</div>
 
-			<div class="comment-counter">&nbsp;</div>
-			<div class="comment-title">&nbsp;</div>
-
-			<div class="discussion-container collapsed"></div>
-			<div class="comment-container new">
-				<div class="comment-status">
-					<div class="approved">Freigeschaltet</div>
-					<div class="deleted">Gelöscht</div>
-				</div>
-				<div class="comment-media hidden">
-					<div class="desc">Dieser Kommentar <br/> beinhaltet Medien.  <br/> Bitte im CMS bearbeiten.</div>
-					<a href="#" class="media-btn">weiter</a>
-				</div>
-				<div class="comment-meta">
-					<div class="comment-user"></div>
-					<div class="comment-toxicity"></div>
-					<div class="comment-timestamp"></div>
-				</div>
-				<div class="comment-content"></div>
+	<div class="discussion-container collapsed"></div>
+	<div class="comment-container new">
+		<div class="comment-status">
+			<div class="approved">Freigeschaltet</div>
+			<div class="deleted">Gelöscht</div>
+		</div>
+		<div class="comment-media hidden">
+			<div class="desc">Dieser Kommentar <br/> beinhaltet Medien.  <br/> Bitte im CMS bearbeiten.</div>
+			<a href="#" class="media-btn">weiter</a>
+		</div>
+		<div class="comment-meta">
+			<div class="comment-user"></div>
+			<div class="comment-toxicity"></div>
+			<div class="comment-timestamp"></div>
+		</div>
+		<div class="comment-content"></div>
+	</div>
+	<div class="comment-staple">
+		<div class="staple-1"></div>
+		<div class="staple-2"></div>
+		<div class="staple-3"></div>
+	</div>
+	<div class="action-btns">
+		<div class="center">
+			<div class="btn delete-btn">
+				<i class="icon icon-delete"></i>
 			</div>
-			<div class="comment-staple">
-				<div class="staple-1"></div>
-				<div class="staple-2"></div>
-				<div class="staple-3"></div>
+			<div class="btn reply-btn">
+				<i class="icon icon-reply"></i>
 			</div>
-			<div class="action-btns">
-				<div class="center">
-					<div class="btn delete-btn">
-						<i class="icon icon-delete"></i>
-					</div>
-					<div class="btn reply-btn">
-						<i class="icon icon-reply"></i>
-					</div>
-					<div class="btn approve-btn">
-						<i class="icon icon-approve"></i>
-					</div>
-					<div class="show-discussion">
-						<span>Diskussion anzeigen</span>
-						<div class="btn show-btn"></div>
-					</div>
-				</div>
+			<div class="btn approve-btn">
+				<i class="icon icon-approve"></i>
+			</div>
+			<div class="show-discussion">
+				<span>Diskussion anzeigen</span>
+				<div class="btn show-btn"></div>
 			</div>
 		</div>
+	</div>
+</div>
 
-	<script src="js/comment.js"></script>
-
+<script src="js/comment.js"></script>
