--- a/webapp/view/dashboard.html
+++ b/webapp/view/dashboard.html
@@ -1,15 +1,16 @@
-
-		<h1 id="mainHeading">Dashboard</h1>
-		<section id="ownStorys" class="loading">
-			<h2 class="heading">Eigene Storys</h2>
-			<div class="discussion-slider">
-				<ul class="slider"></ul>
-			</div>
-		</section>
-		<section id="allStorys">
-			<h2 class="heading">Alle Storys</h2>
-			<div class="discussion-slider">
-				<ul class="slider"></ul>
-			</div>
-		</section>
-		<script src="js/dashboard.js"></script>
+<div class="loaderOverlay"><div class="loader"><div></div><div></div><div></div><div></div></div></div>
+<div id="index" data-type="Overview"></div>
+<h1 id="mainHeading">Dashboard</h1>
+<section id="ownStorys" class="loading">
+	<h2 class="heading">Eigene Storys</h2>
+	<div class="discussion-slider">
+		<ul class="slider"></ul>
+	</div>
+</section>
+<section id="allStorys">
+	<h2 class="heading">Alle Storys</h2>
+	<div class="discussion-slider">
+		<ul class="slider"></ul>
+	</div>
+</section>
+<script src="js/dashboard.js"></script>
